...
            </objects>
            <point key="canvasLocation" x="-1549" y="1255"/>
        </scene>
        <!--Settings-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Settings" id="BYZ-38-t0r" customClass="SettingsViewController" customModule="SpiderByte" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="Settings">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" bouncesZoom="NO" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="VZK-Of-0uc">
                                <rect key="frame" x="0.0" y="-29" width="414" height="494"/>
...
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Vcg-OB-P6T"/>
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="toe-wH-AK8">
                                <rect key="frame" x="107" y="532" width="200" height="27"/>
                                <color key="backgroundColor" red="0.82745098039999998" green="0.1843137255" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Log out">
                                    <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="onLoginButtonPressed:" destination="rnN-7U-JJL" eventType="touchUpInside" id="ghf-So-YOT"/>
                                    <action selector="onLogoutButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mPu-WA-90K"/>
                                </connections>
...
