//
//  SettingsUIControllerTests.swift
//  SpiderByteUITests
//
//  Created by Sadi Ashraful on 29/03/2018.
//  Copyright © 2018 King's College London. All rights reserved.
//

/*import XCTest
@testable import SpiderByte

class SettingsUIControllerTests: XCTestCase {
    

    override func setUp() {
        super.setUp()
    }
    
    override func tearDown() {
        super.tearDown()
    }
    
    func testExample() {
        let app = XCUIApplication ()
        
        XCTAssertEqual(app.tables.count, 1)
        XCTAssertEqual(app.buttons.count, 1)
        
        let table = app.tables.element(boundBy: 0)
        XCTAssertEqual(table.cells.count, 6)
        
        XCUIApplication().tabBars.buttons["Settings"].tap()
        XCUIApplication().buttons["Log out"].tap()
        
        _ = XCUIApplication()
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Report a problem"]/*[[".cells.staticTexts[\"Report a problem\"]",".staticTexts[\"Report a problem\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        app.navigationBars["Feedback"].buttons["Back"].tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["More Information"]/*[[".cells.staticTexts[\"More Information\"]",".staticTexts[\"More Information\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.navigationBars["About"].buttons["Back"].tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Tutorial"]/*[[".cells.staticTexts[\"Tutorial\"]",".staticTexts[\"Tutorial\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.navigationBars["SpiderByte.AppTutorialView"].buttons["Back"].tap()
        
        
    }
    
    func testPerformanceExample() {
        self.measure {
        }
    }
    
}*/
